z-index niggle fix

--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -2,7 +2,7 @@ body {
   position: relative;
   background-color: whitesmoke;
   font-size: 1.2rem;
-  font-family: helvetica, Futura;
+  font-family: helvetica;
   top: 2.5em;
 }
 
@@ -10,7 +10,8 @@ body {
 #map-container {
   position: fixed;
   min-width: 100%;
-  height: 800px ;
+  min-height: 100%;
+  height: 900px ;
   z-index: -2;
   top: 2.5em;
 }
@@ -20,7 +21,6 @@ body {
   width: 100%;
   height: 100%;
   position: fixed;
-
 
 }
 
@@ -41,6 +41,14 @@ background-color: white;
 }
 */
 
+#greeting:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  position: fixed;
+  -webkit-filter: blur(20px);
+}
 
 #modal-background {
   width: 100%;
