--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -36,6 +36,7 @@ fieldset.nav__left {
 }
 
 #container--search-results{
+  z-index: 1;
   width:26em;
   position: fixed;
   top: 2.8em;
